--- a/index.css
+++ b/index.css
@@ -1,1 +1,130 @@
+.navbar {
+  position: absolute;
+  top: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 8.5rem;
+  width: 100%;
+  background-color: #fffbe5;
+  z-index: 5; }
+  .navbar ul {
+    display: flex;
+    justify-content: space-around;
+    font-size: 2rem;
+    text-decoration: none;
+    width: 60%;
+    height: 100%; }
+    .navbar ul li {
+      position: relative;
+      width: 100%;
+      height: 100%; }
+      .navbar ul li:hover {
+        background-color: rgba(45, 63, 75, 0.2); }
+      .navbar ul li .border {
+        position: absolute;
+        bottom: 0;
+        background-color: red;
+        height: 0.5rem; }
+      .navbar ul li a {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: #1d1d1d;
+        text-decoration: none; }
+    .navbar ul .navbar__ul__li-health::before {
+      content: '';
+      width: 0;
+      height: 3px;
+      bottom: 0;
+      left: 0;
+      background: #ff7f66;
+      position: absolute;
+      transition: all 400ms;
+      -webkit-transition: all 400ms; }
+    .navbar ul .navbar__ul__li-health:hover::before {
+      width: 100%; }
+    .navbar ul .navbar__ul__li-energy::before {
+      content: '';
+      width: 0;
+      height: 3px;
+      bottom: 0;
+      left: 0;
+      background: #6698ff;
+      position: absolute;
+      transition: all 400ms;
+      -webkit-transition: all 400ms; }
+    .navbar ul .navbar__ul__li-energy:hover::before {
+      width: 100%; }
+    .navbar ul .navbar__ul__li-garden::before {
+      content: '';
+      width: 0;
+      height: 3px;
+      bottom: 0;
+      left: 0;
+      background: #6cd8a2;
+      position: absolute;
+      transition: all 400ms;
+      -webkit-transition: all 400ms; }
+    .navbar ul .navbar__ul__li-garden:hover::before {
+      width: 100%; }
+    .navbar ul .navbar__ul__li-food::before {
+      content: '';
+      width: 0;
+      height: 3px;
+      bottom: 0;
+      left: 0;
+      background: #ffcd66;
+      position: absolute;
+      transition: all 400ms;
+      -webkit-transition: all 400ms; }
+    .navbar ul .navbar__ul__li-food:hover::before {
+      width: 100%; }
 
+.fixed {
+  position: fixed;
+  top: 0;
+  animation: navbarIn ease 1s forwards; }
+@keyframes navbarIn {
+  0% {
+    height: 8.5rem;
+    background-color: #fffbe5; }
+  100% {
+    height: 7rem;
+    background-color: rgba(209, 209, 209, 0.9);
+    font-family: 'Oswald', sans-serif;
+    font-size: 5rem; } }
+.absolute {
+  position: absolute;
+  top: 0;
+  animation: navbarOut ease 1s forwards; }
+@keyframes navbarOut {
+  0% {
+    height: 7rem;
+    background-color: rgba(209, 209, 209, 0.9);
+    font-size: 5rem; }
+  100% {
+    height: 8.5rem;
+    background-color: #fffbe5; } }
+.logo-fixed {
+  animation: logoOut ease 1s forwards; }
+@keyframes logoOut {
+  0% {
+    width: 15rem;
+    height: 10rem; }
+  100% {
+    width: 9rem;
+    height: 6rem; } }
+.logo-absolute {
+  animation: logoIn ease 1s forwards; }
+@keyframes logoIn {
+  0% {
+    width: 9rem;
+    height: 6rem; }
+  100% {
+    width: 15rem;
+    height: 10rem; } }
+
+/*# sourceMappingURL=index.css.map */
