--- a/main.scss
+++ b/main.scss
@@ -5,15 +5,16 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 8.5rem;
+  height: 5rem;
   width: 100%;
   background-color: rgb(255, 251, 229);
-  z-index: 5;
+  z-index: -9999;
 
   ul {
+    list-style-type: none;
     display: flex;
     justify-content: space-around;
-    font-size: 2rem;
+    font-size: 1rem;
     text-decoration: none;
     width: 60%;
     height: 100%;
@@ -48,20 +49,19 @@
     .navbar__ul__li-health {
 
       &::before {
-
         content: '';
-        width: 0;
-        height: 3px;
+        width: 100%;
+        height: 0;
         bottom: 0;
-        left: 0;
-        background: rgb(255, 127, 102);
+        background-image: linear-gradient(#d1d1d1, linen, gray);
         position: absolute;
+        z-index: -1;
         transition: all 400ms;
         -webkit-transition: all 400ms;
       }
 
       &:hover::before {
-        width: 100%;
+        height: 100%;
       }
 
     }
@@ -69,20 +69,19 @@
     .navbar__ul__li-energy {
 
       &::before {
-
         content: '';
-        width: 0;
-        height: 3px;
+        width: 100%;
+        height: 0;
         bottom: 0;
-        left: 0;
-        background: rgb(102,152,255);
+        background-image: linear-gradient(#d1d1d1, linen, gray);
         position: absolute;
+        z-index: -1;
         transition: all 400ms;
         -webkit-transition: all 400ms;
       }
 
       &:hover::before {
-        width: 100%;
+        height: 100%;
       }
 
     }
@@ -90,20 +89,19 @@
     .navbar__ul__li-garden {
 
       &::before {
-
         content: '';
-        width: 0;
-        height: 3px;
+        width: 100%;
+        height: 0;
         bottom: 0;
-        left: 0;
-        background: rgb(108, 216, 162);
+        background-image: linear-gradient(#d1d1d1, linen, gray);
         position: absolute;
+        z-index: -1;
         transition: all 400ms;
         -webkit-transition: all 400ms;
       }
 
       &:hover::before {
-        width: 100%;
+        height: 100%;
       }
 
     }
@@ -112,18 +110,18 @@
 
       &::before {
         content: '';
-        width: 0;
-        height: 3px;
+        width: 100%;
+        height: 0;
         bottom: 0;
-        left: 0;
-        background: rgb(255,205,102);
+        background-image: linear-gradient(#d1d1d1, linen, gray);
         position: absolute;
+        z-index: -1;
         transition: all 400ms;
         -webkit-transition: all 400ms;
       }
 
       &:hover::before {
-        width: 100%;
+        height: 100%;
       }
 
     }
